# Prolearn

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  error_warning_fix.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.yml
.github/workflows/: ci.yml
backend/: .env  .env.test  Cargo.toml  diesel.toml
backend/src/: main.rs  schema.rs
backend/src/api/: auth.rs  compile.rs  database.rs
backend/src/models/: user.rs
backend/src/tests/: mod.rs  user_tests.rs
backend/src/utils/: logger.rs
docs/: additional_documentation.md
frontend/: babel.config.js  config-overrides.js  jest.config.js  package-lock.json  package.json
frontend/src/: App.css  App.js  utils.js
frontend/src/components/: CodeEditor.css  CodeEditor.js  LearningComponent.js  LearningContent.css
frontend/src/utils/: api.js
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
