[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
jsonwebtoken = "8.0"
chrono = "0.4"

[dev-dependencies]
actix-rt = "2.5"
tokio = { version = "1", features = ["full"] }
